--- a/Courses/Seminars/ZK/Spring16.html
+++ b/Courses/Seminars/ZK/Spring16.html
@@ -23,7 +23,7 @@
 Zero-knowledge interactive proofs are fascinating constructs which enable one party (the "prover") to convince another party (the "verifier") of an assertion (.e.g., a mathematical theorem) , with the property that the verifier learns nothing other than the fact that the assertion being proven is true. In addition to being powerful tools for constructing secure cryptographic protocols, zero-knowledge proofs yield rich classes of computational problems that are of both complexity-theoretic and cryptographic interest<br><br>
 
 
-The the seminar we will follow the <a href="http://people.seas.harvard.edu/~salil/research/phdthesis-abs.html">survey</a> by Salil Vadhan, and then )move to more 
+The the seminar we will follow the <a href="http://people.seas.harvard.edu/~salil/research/phdthesis.pdf">survey</a> by Salil Vadhan, and then )move to more 
 	recent results<br><br>
 
 	In each meeting one student will cover a single topic as listed below. <br><br>
@@ -45,9 +45,9 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 <br> <br>
 <h2>Topics and schedule</h2> 
 
-Not set yet.
 
-<!--
+
+
 <table  border=1 style="BORDER-BOTTOM: medium none; BORDER-LEFT: medium none; BORDER-COLLAPSE:
  collapse; BORDER-TOP: medium none; BORDER-RIGHT: medium none" border="1" cellpadding="0" cellspacing="0">
  <tbody>
@@ -57,79 +57,73 @@ Not set yet.
  </tr>
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 1 </td> <td> 10/3 </td> <td> Etan Grundstein </td> <td> Introduction <br> <i>Section 1</i> </td>     
+    <td> 1 </td> <td> 01/3 </td> <td> Udi Peled </td> <td> Introduction <br> <i>Section 1</i> </td>     
  </tr>
 
 
-<tr  style= "BACKGROUND: red">
-    <td>  </td> <td> 17/3 </td> <td>  </td> <td> NO CLASS </td>     
- </tr>
 
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 2 </td> <td> 24/3 </td> <td> Adi Sela </td> <td> Definitions <br> <i>Section 2</i> </td>     
+    <td> 2 </td> <td> 08/3 </td> <td> ?  </td> <td> Definitions <br> <i>Section 2</i> </td>     
+ </tr>
+
+
+<tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+    <td> 3 </td> <td> 15/3 </td> <td> Noam Mazor </td> <td> Statistical Difference part <span style= "color:#3300CC"> &#8544</span>  <br> <i>Section 3.1</i> </td>     
  </tr>
 
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 3 </td> <td> 14/4 </td> <td> Avishay Yifrach </td> <td> A Complete Problem for Computable Ensembles: part<span style= "color:#3300CC"> &#8544</span><br> <i>Section 3</i> </td>     
+    <td> 4 </td> <td> 22/3 </td> <td> ? </td> <td> Statistical Difference part <span style= "color:#3300CC"> &#8545</span><br> <i>Section 3.2</i> </td>     
  </tr>
 
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   <td> 4 </td> <td> 21/4 </td> <td> Paz Dangur  </td> <td> A Complete Problem for Computable Ensembles: part <span style= "color:#3300CC"> &#8545</span><br> <i>Section 3</i> </td>      
+   <td> 5 </td> <td> 29/4 </td> <td> ?  </td> <td> Analysing General HSVSZK proofs<br>  <i>Section 3.3</i></td>      
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%"> 
-	 <td> 5 </td> <td>  28/4  </td> <td> Jonathan Zcharya </td> <td><a href=http://eccc.hpi-web.de/report/2006/122/revision/1/download/>All Natural NPC Problems Have Average-Case Complete Versions</a> 
-  <br> <i> Paper by Noam Livne </i>
+	 <td> 6 </td> <td>  05/4  </td> <td> ? </td> <td>Entropy Difference to Statistical  Difference <br>  <i>Section 3.4</i>
  </td>   	 
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
    
-	<td> 6 </td> <td>  5/5  </td> <td> Or danon and Eliraz Levi </td> <td> Decision Versus Search and One-Way Functions <br> <i>Section 4</i> </td>    
+	<td> 7 </td> <td>  12/04  </td> <td> ?</td> <td> Applications of Complete Problems part <span style= "color:#3300CC"> &#8544</span> <br> <i>Sections 4.1--4.4</i> </td>    
  </tr>
 
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 7 </td> <td>   12/5  </td> <td> Tal Kligman </td> <td> Samplable Ensembles <br> <i>Section 5</i> </td>        
+    <td> 8 </td> <td>   03/5  </td> <td> ? </td> <td> Applications of Complete Problems part <span style= "color:#3300CC"> &#8545</span> <br> <i>Sections 4.5--4.8</i> </td>        
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 8 </td> <td> 19/5 </td> <td>Kineret Segal</td> <td>  Hardness Amplification   <br> <i>Section 6</i></td>     
+    <td> 9 </td> <td> 10/5 </td> <td>?</td> <td>  Private  Coins Vs. Public Coin  <br> <i>Section 5</i></td>     
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 9 </td> <td> 26/5 </td> <td> Guy Braude</td> <td> <a href=http://www.cs.cmu.edu/~odonnell/papers/hardness.pdf>Hardness amplification within NP</a>  <br>  <i> Paper by Ryan O'Donnell</i>
+      <td> 10 </td> <td> 10/5 </td> <td>?</td> <td>  Coping with Cheating Verifiers  <br> <i>Section 6</i></td>     
+
 </td>     
  </tr>
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 10 </td> <td> 2/6 </td> <td> Uri Sharir</td> <td> Worst-Case Versus Average-Case and Cryptography (without proof of Thm. 7.5)<br> <i>Section 7</i></td>     
+    <td> 11 </td> <td> 24/5 </td> <td> Alon Brutzkus </td> <td> Noninteractive SZK<br> <i>Section 7</i></td>     
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
-	 <td> 11 </td> <td> 9/6 </td> <td> Tzion Sasson </td> <td> <a href=http://dimacs.rutgers.edu/~adib/pubs/redux-sicomp.pdf>On Worst-Case to Average-Case Reductions for NP Problems</a>  <br>  <i> Paper by Andrej Bogdanov and Luca Trevisan</i>
+	 <td> 12 </td> <td> 31/6 </td> <td> Nissan Levi </td> <td> <a href=http://people.seas.harvard.edu/~salil/research/compzk-Mar05.pdf>An Unconditional Study of Computational Zero Knowledge</a>  <br>  <i> Paper by  Salil Vadhan</i>
 </td>   
  </tr>
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-     <td> 12</td> <td> 16/6   </td> <td> Gal Rotem </td> <td> <a href=http://www.liafa.univ-paris-diderot.fr/~dxiao/docs/satcheck.pdf>On the Power of Randomized Reductions and  the Checkability of
-SAT</a> 
-	 <br>  <i> Paper by  Mohammad Mahmoody and David Xia</i>
+     <td> 13</td> <td> 07/6   </td> <td> Udi Peled </td> <td> <a href=http://www.iacr.org/phds/52_ShienJinOng_UnconditionalRelationshipswith.pdf>UNCONDITIONAL CHARACTERIZATIONS OF ZERO KNOWLEDGE</a> 
+	 <br>  <i>Chapter 4 in Shien Jin Ong Phd Thesis</i>
  </td>    
- </tr>
- 
- <tr  style= "BACKGROUND: #FF00FF 0% 50%">
-	 <td> 13</td> <td>  21/6 <br>
-<b>Sunday</b>	 </td> <td> Coral Grichner </td> <td> <a href=http://www.cs.tau.ac.il/~amnon/Papers/GST.CCC07.pdf>If NP Languages Are Hare On The
-Worst-Case,<br>Then It Is Easy to Find Their Hard Instances</a>  <br>  <i> Paper by  Dan Gutfreund, Ronen Shaltiel, and Amnon Ta-Shma </i>
-</td>    
  </tr>
  
  
 </tbody>
 </table>
- -->
+ 
 
 <br><br> 
 
