--- a/Courses/Seminars/ZK/Spring16.html
+++ b/Courses/Seminars/ZK/Spring16.html
@@ -17,7 +17,7 @@
 <h2 style="FONT-SIZE: 20pt"><a href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a></h2>
 
 
-<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: ?? </span> <br><br><br>
+<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: Shenkar 105</span> <br><br><br>
                                                                                               
 
 Zero-knowledge interactive proofs are fascinating constructs which enable one party (the "prover") to convince another party (the "verifier") of an assertion (.e.g., a mathematical theorem) , with the property that the verifier learns nothing other than the fact that the assertion being proven is true. In addition to being powerful tools for constructing secure cryptographic protocols, zero-knowledge proofs yield rich classes of computational problems that are of both complexity-theoretic and cryptographic interest<br><br>
