--- a/Courses/Seminars/ZK/Spring16.html
+++ b/Courses/Seminars/ZK/Spring16.html
@@ -63,7 +63,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
 
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 2 </td> <td> 08/3 </td> <td> ?  </td> <td> Definitions <br> <i>Section 2</i> </td>     
+    <td> 2 </td> <td> 08/3 </td> <td> Nathanel Ozeri   </td> <td> Definitions <br> <i>Section 2</i> </td>     
  </tr>
 
 
