--- a/Courses/Seminars/ZK/Spring16.html
+++ b/Courses/Seminars/ZK/Spring16.html
@@ -72,12 +72,12 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 4 </td> <td> 22/3 </td> <td> ? </td> <td> Statistical Difference part <span style= "color:#3300CC"> &#8545</span><br> <i>Section 3.2</i> </td>     
+    <td> 4 </td> <td> 22/3 </td> <td> David Agassi  </td> <td> Statistical Difference part <span style= "color:#3300CC"> &#8545</span><br> <i>Section 3.2</i> </td>     
  </tr>
 
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   <td> 5 </td> <td> 29/4 </td> <td> ?  </td> <td> Analysing General HSVSZK proofs<br>  <i>Section 3.3</i></td>      
+   <td> 5 </td> <td> 29/4 </td> <td> Shkolnik Michael  </td> <td> Analysing General HSVSZK proofs<br>  <i>Section 3.3</i></td>      
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%"> 
@@ -87,7 +87,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
    
-	<td> 7 </td> <td>  12/04  </td> <td> ?</td> <td> Applications of Complete Problems part <span style= "color:#3300CC"> &#8544</span> <br> <i>Sections 4.1--4.4</i> </td>    
+	<td> 7 </td> <td>  12/04  </td> <td> Zahi Taub </td> <td> Applications of Complete Problems part <span style= "color:#3300CC"> &#8544</span> <br> <i>Sections 4.1--4.4</i> </td>    
  </tr>
 
  
@@ -96,7 +96,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 9 </td> <td> 10/5 </td> <td>?</td> <td>  Private  Coins Vs. Public Coin  <br> <i>Section 5</i></td>     
+    <td> 9 </td> <td> 10/5 </td> <td> Elazar Gershoni </td> <td>  Private  Coins Vs. Public Coin  <br> <i>Section 5</i></td>     
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
