--- a/Courses/Seminars/ZK/Spring16.html
+++ b/Courses/Seminars/ZK/Spring16.html
@@ -92,7 +92,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 8 </td> <td>   03/5  </td> <td> ? </td> <td> Applications of Complete Problems part <span style= "color:#3300CC"> &#8545</span> <br> <i>Sections 4.5--4.8</i> </td>        
+    <td> 8 </td> <td>   03/5  </td> <td> Barak Arkis  </td> <td> Applications of Complete Problems part <span style= "color:#3300CC"> &#8545</span> <br> <i>Sections 4.5--4.8</i> </td>        
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
