--- a/Courses/Seminars/ZK/Spring16.html
+++ b/Courses/Seminars/ZK/Spring16.html
@@ -77,7 +77,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   <td> 5 </td> <td> 29/3</td> <td> Shkolnik Michael  </td> <td> Analysing General HSVSZK proofs<br>  <i>Section 3.3</i></td>      
+   <td> 5 </td> <td> 29/3</td> <td> Omer Anson   </td> <td> Analysing General HSVSZK proofs<br>  <i>Section 3.3</i></td>      
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%"> 
@@ -96,7 +96,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 9 </td> <td> 10/5 </td> <td> Elazar Gershoni </br> &amp; Omer Anson </td> <td>  Private  Coins Vs. Public Coin  <br> <i>Section 5</i></td>     
+    <td> 9 </td> <td> 10/5 </td> <td> Elazar Gershoni </br> &amp; Michael Shkolnik  </td> <td>  Private  Coins Vs. Public Coin  <br> <i>Section 5</i></td>     
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
