--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ d.addEventListener ? d.addEventListener("click",_gaLt,!1) : d.attachEvent && d.a
 <div   alt="" class="backup shadow2" id="iftach_pic"></div>
 <p style="font-size : 110%"> I am a faculty member at the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
 at <a href="http://www.tau.ac.il">Tel Aviv University</a>.
-I am part of the <a href="http://www.cs.tau.ac.il/~theory/newsite">Theory of Computation Group</a>, and a member at the <a href="http://www.icore-algo.org.il/">Israeli
+I am a member at the <a href="http://www.icore-algo.org.il/">Israeli
 Center of Research Excellence in Algorithms (ICORE)</a> and the <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
 Information Security</a>.<br><br>
 My main research interests are Cryptography and Computational
