--- a/Courses/Seminars/ZK/Spring16.html
+++ b/Courses/Seminars/ZK/Spring16.html
@@ -105,21 +105,22 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 </td>     
  </tr>
  
- <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 11 </td> <td> 24/5 </td> <td> Alon Brutzkus </td> <td> Noninteractive SZK<br> <i>Section 7</i></td>     
- </tr>
-
- <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
-	 <td> 12 </td> <td> 31/6 </td> <td> Nissan Levi </td> <td> <a href=http://people.seas.harvard.edu/~salil/research/compzk-Mar05.pdf>An Unconditional Study of Computational Zero Knowledge</a>  <br>  <i> Paper by  Salil Vadhan</i>
-</td>   
- </tr>
- 
-<tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-     <td> 13</td> <td> 07/6   </td> <td> Udi Peled </td> <td> <a href=http://www.iacr.org/phds/52_ShienJinOng_UnconditionalRelationshipswith.pdf>UNCONDITIONAL CHARACTERIZATIONS OF ZERO KNOWLEDGE</a> 
-	 <br>  <i>Chapter 4 in Shien Jin Ong Phd Thesis</i>
+ <tr  style= "BACKGROUND: rgb(255,0,0) 0% 50%">
+     <td> </td> <td> 24/5   </td> <td>  </td> <td> No Class
  </td>    
  </tr>
  
+ 
+ <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+    <td> 11 </td> <td> 31/5 </td> <td> Alon Brutzkus </td> <td> Noninteractive SZK<br> <i>Section 7</i></td>     
+ </tr>
+
+ <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
+	 <td> 12 </td> <td> 07/6    </td> <td> Udi Peled </td> <td> <a href=http://people.seas.harvard.edu/~salil/research/compzk-Mar05.pdf>An Unconditional Study of Computational Zero Knowledge</a>  <br>  <i> Paper by  Salil Vadhan</i>
+</td>   
+ </tr>
+ 
+
  
 </tbody>
 </table>
