--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -2,14 +2,14 @@
 <html>
 <head>
  <meta charset=utf-8">
- <title>Seminar on  Zero Knowledge Proofs </title> 
+ <title>Seminar on  Secure Multi-Party Computation  </title> 
  <style>td{text-align:center;padding:5px} </style>
 </head>
 
 <body style = "padding-left:40px; font-size:120%">
 
 
-<h1><span style="FONT-SIZE: 26pt">Seminar on  Zero Knowledge Proofs <br> </span>  <span style="FONT-SIZE: 18pt">Id: 0368-4152-01</span></h1> 
+<h1><span style="FONT-SIZE: 26pt">Seminar on  Secure Multi-Party Computation <br> </span>  <span style="FONT-SIZE: 18pt">Id: 0368-4152-01</span></h1> 
 
 
 <img alt="" height="334" src="naranjas.jpg" width="500"><br>
@@ -20,11 +20,12 @@
 <span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: Shenkar 105</span> <br><br><br>
                                                                                               
 
-Zero-knowledge interactive proofs are fascinating constructs which enable one party (the "prover") to convince another party (the "verifier") of an assertion (.e.g., a mathematical theorem) , with the property that the verifier learns nothing other than the fact that the assertion being proven is true. In addition to being powerful tools for constructing secure cryptographic protocols, zero-knowledge proofs yield rich classes of computational problems that are of both complexity-theoretic and cryptographic interest<br><br>
+In Secure Multiparty Computation, two or more parties wish to jointly compute a function of their inputs in a secure manner: the outputs received by the parties are correctly distributed, and  the privacy of each party’s input is preserved as much as possible, even in the presence of adversarial behavior.
+Formally defining secure multiparty computation and implementing the secure computation for many functions of interest, is arguably one of the great achievements of theoretical cryptography.
 
+ 
 
-The the seminar we will follow the <a href="http://people.seas.harvard.edu/~salil/research/phdthesis.pdf">survey</a> by Salil Vadhan, and then )move to more 
-	recent results<br><br>
+The seminar will not follow any specific text, references to the the relevant material for each lecture will be given in the seminar website.<br><br>
 
 	In each meeting one student will cover a single topic as listed below. <br><br>
 	
@@ -32,7 +33,9 @@ The the seminar we will follow the <a href="http://people.seas.harvard.edu/~sali
 
 <h2>Prerequisites</h2>
 This is an advanced seminar, so background in the theory of computation (Algorithm, Computability, Complexity) is required. Students with particularly strong math background
-are also welcome.
+are also welcome. Cryptography course, like Foundation of Cryptography or Introduction to Modern Cryptography, is recommended but not required. 
+
+
 
 
 <h2>Presentations</h2>
@@ -45,17 +48,19 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 <br> <br>
 <h2>Topics and schedule</h2> 
 
-
-
+Later... (around January)
+ <!--
 
 <table  border=1 style="BORDER-BOTTOM: medium none; BORDER-LEFT: medium none; BORDER-COLLAPSE:
  collapse; BORDER-TOP: medium none; BORDER-RIGHT: medium none" border="1" cellpadding="0" cellspacing="0">
  <tbody>
  
+ 
  <tr> 
     <td> # </td> <td> When </td> <td> Who </td> <td> What </td>     
  </tr>
  
+
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
     <td> 1 </td> <td> 01/3 </td> <td> Udi Peled </td> <td> Introduction <br> <i>Section 1</i> </td>     
  </tr>
@@ -142,7 +147,8 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
   </ul> 
   <br><br> 
 
-  -->
+
   
   </body>
 </html>
+  -->
