--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -12,7 +12,7 @@
 <h1><span style="FONT-SIZE: 26pt">Seminar on  Secure Multi-Party Computation <br> </span>  <span style="FONT-SIZE: 18pt">Id: 0368-4152-01</span></h1> 
 
 
-<img alt="" height="334" src="naranjas.jpg" width="500"><br>
+<img alt="" height="334" src="MPC.jpg" width="500"><br>
                                                             
 <h2 style="FONT-SIZE: 20pt"><a href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a></h2>
 
