--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -2,14 +2,14 @@
 <html>
 <head>
  <meta charset=utf-8">
- <title>Seminar on  Secure Multi-Party Computation  </title> 
+ <title>Seminar on  Secure Multi-Party Computation</title> 
  <style>td{text-align:center;padding:5px} </style>
 </head>
 
 <body style = "padding-left:40px; font-size:120%">
 
 
-<h1><span style="FONT-SIZE: 26pt">Seminar on  Secure Multi-Party Computation <br> </span>  <span style="FONT-SIZE: 18pt">Id: 0368-4152-01</span></h1> 
+<h1><span style="FONT-SIZE: 26pt">Seminar on  Secure Multi-Party Computation <br> </span>  <span style="FONT-SIZE: 18pt">Id: 0368-4182-01</span></h1> 
 
 
 <img alt="" height="334" src="MPC.jpg" width="500"><br>
@@ -17,7 +17,7 @@
 <h2 style="FONT-SIZE: 20pt"><a href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a></h2>
 
 
-<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: Shenkar 105</span> <br><br><br>
+<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: not set yet</span> <br><br><br>
                                                                                               
 
 In Secure Multiparty Computation, two or more parties wish to jointly compute a function of their inputs in a secure manner: the outputs received by the parties are correctly distributed, and  the privacy of each party’s input is preserved as much as possible, even in the presence of adversarial behavior.
@@ -29,13 +29,13 @@ The seminar will not follow any specific text, references to the the relevant ma
 
 	In each meeting one student will cover a single topic as listed below. <br><br>
 	
-<h2>Undergrad studetns</h2>	 Third year students who are <b> willing to work hard</b>, are welcome to join the seminar, but please consult me via email before registering.
 
 <h2>Prerequisites</h2>
 This is an advanced seminar, so background in the theory of computation (Algorithm, Computability, Complexity) is required. Students with particularly strong math background
 are also welcome. Cryptography course, like Foundation of Cryptography or Introduction to Modern Cryptography, is recommended but not required. 
 
 
+<h3>Undergrad students</h3>	 Third year students who are <b> willing to work hard</b>, are welcome to join the seminar, but please consult me via email before registering.
 
 
 <h2>Presentations</h2>
