--- a/index.html
+++ b/index.html
@@ -162,8 +162,41 @@ Complexity.<br></p>
 <span class=boxtop id=pro>[Professional Activity]</span>
 <span class=boxtop id=teach>[Teaching]</span>  
 <span class=boxtop id=edu>[School Activity]</span></br>
+<span class=boxtop id=Stuff>[Labs Members]</span>
 <span class=boxtop id=postdocs>[Call for Postdocs & Interns]</span>
 
+
+<div class="Stuff top">
+<h2>Labs Members</h2>
+<b>Students</b><br>
+<ul>
+
+<li> Nissan Levi</li>
+<li> Noam Mazor</li>
+<li> Udi Peled</li>
+
+</ul>
+
+<b>Postdocs</b><br>
+<ul>
+<li>   <a href="http://www.cs.tau.ac.il/~cohenran/">Ran Choen</a></li>
+<li>   <a href="http://wicom.upf.edu/node/98">Nikolaos Makriyannis</a></li>
+</ul>
+<br>
+
+<b>Past members</b><br>
+<ul>
+<li>   <a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> (Masters student, now Phd studetns at MIT)</li>
+<li>   Eliad Tsfadia (Masters student)</li>
+<li>   <a href="http://people.csail.mit.edu/itayberm/">Eran Omri</a> (Postdoc, now faculty at  Ariel University)</li>
+<li>   <a href="http://christinabrzuska.de/">Christina Brzuska</a> (Postdoc, now faculty at Hamburg University of Technology)</li>
+<li>   <a href="http://cs.nyu.edu/~tentes/Homepage.html">Aris Tentes</a> (longterm student visitor)</li>
+</ul>
+<br>
+ </div>
+ 
+
+ 
 
 <div class="info top">
 <h2>Contact Information</h2>
@@ -271,15 +304,19 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <h2> Teaching  </h2>
 <ul>
 
+    <li><a href="http://tau-cm2017a.wikidot.com/">Computational Models (Fall 16)</a></li>
+  <li><a  href="http://moodle.tau.ac.il/course/view.php?id=368416201" >Foundation  of Cryptography (Fall 16)</a></li>
+
+
+
     <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall15/index.html"> Applications of Information Theory&nbsp; (Fall 15)</a></li>
 	
     <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/ZK/Spring16.html"> Zero Knowledge Proofs (student seminar)&nbsp; (Spring 16)</a></li>
 
   <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/AvgHardness/Spring15.html"> Average-Case Hardness (student seminar)&nbsp; (Spring 15)</a></li>
-  
-  <li><a href="http://tau-cm2015b.wikidot.com/">Computational Model (Spring 15)</a></li>
-  <li><a  href="Courses/FOC/Spring14/index.html" >Foundation  of Cryptography (Spring 14)</a></li>
-</ul></div>
+  </ul></div>
+ 
+ 
 
 <div class="edu top">
 <h2>School Activity</h2>
