--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@ Complexity.<br></p>
 <span class=boxtop id=pro>[Professional Activity]</span>
 <span class=boxtop id=teach>[Teaching]</span>  
 <span class=boxtop id=edu>[School Activity]</span></br>
-<span class=boxtop id=Stuff>[Labs Members]</span>
+<span class=boxtop id=Stuff>[Group Members]</span>
 <span class=boxtop id=postdocs>[Call for Postdocs & Interns]</span>
 
 
 <div class="Stuff top">
-<h2>Labs Members</h2>
+<h2>Group Members</h2>
 <b>Students</b><br>
 <ul>
 
