--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ Iftach Haitner and <a href="http://u.cs.biu.ac.il/%7Eomrier/">Eran Omri</a><br>
 <strong>Coin Flipping with Constant Bias ImpliesOne-Way Functions</strong><br>
 <span class=abslide>[abstract]</span>&nbsp <a href="papers/CoinFlipping/Seminar.pptx">[slides]</a><br>
 SIAM Journal of Computing 2013   <a  href="http://epubs.siam.org/doi/abs/10.1137/120887631">[link]</a> <br>
-FOCS 2011 <a href="papers/CoinFlipping/FOCS.pptx">[pdf]</a><br>
+FOCS 2011 <a href="papers/CoinFlipping/CoinFlippingtoOWF_FOCS.pdf">[pdf]</a><br>
 Draft of full version <a href="papers/CoinFlipping/CoinFlippingtoOWF.pdf">[pdf]</a></p>
 
 <div class="box">
