--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@ Iftach Haitner and Eliad Tsfadia <br>
 <strong>An Almost-Optimally Fair Three-Party Coin-Flipping Protocol</strong><br>
 <span class=abslide>[abstract]</span> <a href="papers/3PartyCF/3Party-full.ppsx">[slides]</a> <br>
 STOC 2014 <a href="papers/3PartyCF/QuasiOptimalCF_CR.pdf">[pdf]</a><br>
+SIAM Journal of Computing 2017, to appear <br>
 Draft of full version <a href="papers/3PartyCF/QuasiOptimalCF_Full.pdf">[pdf]</a> <img src="up.png" class=update1><br><br>
 
 
