--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -14,10 +14,10 @@
 
 <img alt="" height="334" src="MPC.jpg" width="500"><br>
                                                             
-<h2 style="FONT-SIZE: 20pt"><a href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a></h2>
+<h2 style="FONT-SIZE: 20pt"><a href="http://www.cs.tau.ac.il/~cohenran/">Ran Cohen</a> and <a href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a></h2>
 
 
-<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: not set yet</span> <br><br><br>
+<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: Schriber 008</span> <br><br><br>
                                                                                               
 
 In Secure Multiparty Computation, two or more parties wish to jointly compute a function of their inputs in a secure manner: the outputs received by the parties are correctly distributed, and  the privacy of each party’s input is preserved as much as possible, even in the presence of adversarial behavior.
@@ -48,8 +48,8 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 <br> <br>
 <h2>Topics and schedule</h2> 
 
-Later... (around January)
- <!--
+
+ 
 
 <table  border=1 style="BORDER-BOTTOM: medium none; BORDER-LEFT: medium none; BORDER-COLLAPSE:
  collapse; BORDER-TOP: medium none; BORDER-RIGHT: medium none" border="1" cellpadding="0" cellspacing="0">
@@ -62,70 +62,69 @@ Later... (around January)
  
 
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 1 </td> <td> 01/3 </td> <td> Udi Peled </td> <td> Introduction <br> <i>Section 1</i> </td>     
+    <td> 1 </td> <td> 14/03 </td> <td> Ran Cohen  </td> <td> Introduction <br> <i></i> </td>     
  </tr>
 
 
 
-<tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 2 </td> <td> 08/3 </td> <td> Nathanel Ozeri   </td> <td> Definitions <br> <i>Section 2</i> </td>     
+<tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
+    <td> 2 </td> <td> 21/03 </td> <td> Nathanel Ozeri   </td> <td> Definitions <br> <i>??</i> </td>     
  </tr>
 
 
-<tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 3 </td> <td> 15/3 </td> <td> Noam Mazor </td> <td> Statistical Difference part <span style= "color:#3300CC"> &#8544</span>  <br> <i>Section 3.1</i> </td>     
+ <tr  style= "BACKGROUND: rgb(255,0,0) 0% 50%">
+    <td> </td> <td> 28/03 </td> <td> NO CLASS </td> <td> <span style= "color:#3300CC"></span>  <br> <i></i> </td>     
  </tr>
 
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 4 </td> <td> 22/3 </td> <td> David Agassi  </td> <td> Statistical Difference part <span style= "color:#3300CC"> &#8545</span><br> <i>Section 3.2</i> </td>     
+    <td> 3 </td> <td> 04/04 </td> <td>?  </td> <td> ??</span><br> <i>??</i> </td>     
  </tr>
 
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   <td> 5 </td> <td> 29/3</td> <td> Omer Anson   </td> <td> Analysing General HSVSZK proofs<br>  <i>Section 3.3</i></td>      
+   <td> 4 </td> <td> 05/04 (Wednesday!)</td> <td>  ?  </td> <td> ?<br>  <i><!-- Section 3.3 --></i></td>      
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%"> 
-	 <td> 6 </td> <td>  05/4  </td> <td> Alon Elmaliah </br> &amp;  Barak Sternberg  </td> <td>Entropy Difference to Statistical  Difference <br>  <i>Section 3.4</i>
+	 <td> 5 </td> <td>  25/4  </td> <td> ? </td> <td>? <br>  <i>?</i>
  </td>   	 
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
    
-	<td> 7 </td> <td>  12/04  </td> <td> Zahi Taub  </br> &amp; Dafna Sade</td> <td> Applications of Complete Problems part <span style= "color:#3300CC"> &#8544</span> <br> <i>Sections 4.1--4.4</i> </td>    
+	<td> 6 </td> <td>  09/05  </td> <td>? </td> <td> ?  <br> <i>?</i> </td>    
  </tr>
 
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 8 </td> <td>   03/5  </td> <td> Barak Arkis  </td> <td> Applications of Complete Problems part <span style= "color:#3300CC"> &#8545</span> <br> <i>Sections 4.5--4.8</i> </td>        
+    <td> 7 </td> <td>   16/05  </td> <td> ?  </td> <td> <br> <i>?</i> </td>        
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 9 </td> <td> 10/5 </td> <td> Elazar Gershoni </br> &amp; Michael Shkolnik  </td> <td>  Private  Coins Vs. Public Coin  <br> <i>Section 5</i></td>     
+    <td> 8 </td> <td> 23/05 </td> <td> ?   </td> <td>  ?  <br> <i></i></td>     
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-      <td> 10 </td> <td> 17/5 </td> <td>Gal Rotem</td> <td>  Coping with Cheating Verifiers  <br> <i>Section 6</i></td>     
+      <td> 9 </td> <td> 06/06 </td> <td>?</td> <td>  ?  <br> <i>?</i></td>     
 
 </td>     
  </tr>
  
- <tr  style= "BACKGROUND: rgb(255,0,0) 0% 50%">
-     <td> </td> <td> 24/5   </td> <td>  </td> <td> No Class
- </td>    
- </tr>
+ 
  
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 11 </td> <td> 31/5 </td> <td> Alon Brutzkus </td> <td> Noninteractive SZK<br> <i>Section 7</i></td>     
+    <td> 10 </td> <td> 13/06  </td> <td> ? </td> <td> ?<br> <i>?</i></td>     
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
-	 <td> 12 </td> <td> 07/6    </td> <td> Udi Peled </td> <td> <a href=http://people.seas.harvard.edu/~salil/research/compzk-Mar05.pdf>An Unconditional Study of Computational Zero Knowledge</a>  <br>  <i> Paper by  Salil Vadhan</i>
+	 <td> 11 </td> <td> 20/06    </td> <td> ? </td> <td> ?<br>  <i> ?</i>
 </td>   
  </tr>
  
-
+<tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+    <td> 12 </td> <td> 27/06 </td> <td> ? </td> <td> ?<br> <i>?</i></td>     
+ </tr>
  
 </tbody>
 </table>
@@ -133,17 +132,12 @@ Later... (around January)
 
 <br><br> 
 
-<!--
+
 <h2> Additional Reading</h2>
 
 
 <ul> 
-  <li> Sanjeev Arora and Boaz Barak <a href="https://www.cs.princeton.edu/theory/complexity">Computational Complexity: A Modern Approach.</a> </li>
-
-  <li> Oded Goldreich <a href="http://www.wisdom.weizmann.ac.il/~oded/cc-book.html">Computational Complexity: A Conceptual Perspective.</a> </li>
-  
-  <li> Valentine Kabanets  <a href="http://www2.cs.sfu.ca/~kabanets/881">Course on Average-Case Complexity.</a> </li>
-  
+  <li> TODO...
   </ul> 
   <br><br> 
 
@@ -151,4 +145,3 @@ Later... (around January)
   
   </body>
 </html>
-  -->
