--- a/index.html
+++ b/index.html
@@ -304,10 +304,15 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <h2> Teaching  </h2>
 <ul>
 
+ <li><a  href="http://moodle.tau.ac.il/course/view.php?id=368416201"> Foundation  of Cryptography, Advanced Topics (Spring 17)</a></li>
+
+  <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/MPC/Spring17.html"> Multi Party Computation (student seminar)&nbsp; (Spring 17)</a></li>
+
+
     <li><a href="http://tau-cm2017a.wikidot.com/">Computational Models (Fall 16)</a></li>
-  <li><a  href="http://moodle.tau.ac.il/course/view.php?id=368416201" >Foundation  of Cryptography (Fall 16)</a></li>
+  <li><a  href="http://moodle.tau.ac.il/course/view.php?id=368416201" >Foundation  of Cryptography, the Basics (Fall 16)</a></li>
 
-
+  
 
     <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall15/index.html"> Applications of Information Theory&nbsp; (Fall 15)</a></li>
 	
